--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -5,6 +5,9 @@
   "item.mccourse.onion": "Onion",
   "item.mccourse.aurora_ashes": "Aurora Ashes",
 
+  "item.mccourse.onion_seeds": "Onion Seeds",
+
+
   "block.mccourse.azurite_block": "Block of Azurite",
 
   "block.mccourse.azurite_ore": "Azurite Ore",
@@ -26,6 +29,8 @@
 
   "block.mccourse.azurite_door": "Azurite Door",
   "block.mccourse.azurite_trapdoor": "Azurite Trapdoor",
+
+  "block.mccourse.onion_crop": "Onion Crop",
 
 
   "tooltip.mccourse.chainsaw.tooltip.shift": "Press §eShift§r for more Information!",
