--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -35,6 +35,8 @@
   "block.mccourse.catmint": "Catmint",
   "block.mccourse.potted_catmint": "Potted Catmint",
 
+  "block.mccourse.colored_leaves": "Colored Leaves",
+
   "tooltip.mccourse.chainsaw.tooltip.shift": "Press §eShift§r for more Information!",
   "tooltip.mccourse.chainsaw.tooltip.1": "This Chainsaw will cut down trees fast!",
   "tooltip.mccourse.chainsaw.tooltip.2": "§oChainsaw go vrooom!§r",
